@@ -10,19 +10,10 @@ dependencies {
     implementation("org.junit.jupiter:junit-jupiter:5.7.0")
 }
 
-// TODO: move into the project
-open class IOCliTask : org.jetbrains.intellij.tasks.RunIdeTask() {
-    // Name of the runner
-    @get:Input
-    val runner: String? by project
-
-    // Input directory with files
+abstract class BaseInputTask : org.jetbrains.intellij.tasks.RunIdeTask() {
+    // Input directory
     @get:Input
     val input: String? by project
-
-    // Output directory to store indexes and methods data
-    @get:Input
-    val output: String? by project
 
     init {
         jvmArgs = listOf(
@@ -37,11 +28,17 @@ open class IOCliTask : org.jetbrains.intellij.tasks.RunIdeTask() {
     }
 }
 
-open class PreprocessKotlinJavaCliTask : org.jetbrains.intellij.tasks.RunIdeTask() {
-    // Input directory with files
+abstract class IOCliTask : BaseInputTask() {
+    // Name of the runner
     @get:Input
-    val input: String? by project
+    val runner: String? by project
 
+    // Output directory to store indexes and methods data
+    @get:Input
+    val output: String? by project
+}
+
+abstract class PreprocessKotlinJavaCliTask : BaseInputTask() {
     // Output directory to store indexes and methods data
     @get:Input
     val output: String? by project
@@ -49,42 +46,14 @@ open class PreprocessKotlinJavaCliTask : org.jetbrains.intellij.tasks.RunIdeTask
     // Absolute path to Android SDK
     @get:Input
     val androidSdk: String? by project
-
-    init {
-        jvmArgs = listOf(
-            "-Djava.awt.headless=true",
-            "--add-exports",
-            "java.base/jdk.internal.vm=ALL-UNNAMED",
-            "-Djdk.module.illegalAccess.silent=true"
-        )
-        maxHeapSize = "20g"
-        standardInput = System.`in`
-        standardOutput = System.`out`
-    }
 }
 
-open class TestOpenKotlinJavaTask : org.jetbrains.intellij.tasks.RunIdeTask() {
-    // Input directory with files
-    @get:Input
-    val input: String? by project
-
+abstract class TestOpenKotlinJavaTask : BaseInputTask() {
     @get:Input
     val preprocessOutput: String? by project
 
     @get:Input
     val androidSdk: String? by project
-
-    init {
-        jvmArgs = listOf(
-            "-Djava.awt.headless=true",
-            "--add-exports",
-            "java.base/jdk.internal.vm=ALL-UNNAMED",
-            "-Djdk.module.illegalAccess.silent=true"
-        )
-        maxHeapSize = "20g"
-        standardInput = System.`in`
-        standardOutput = System.`out`
-    }
 }
 
 tasks {
